# dd-solvers

./: .gitignore  Dockerfile  INSTALL.sh  README.md  notes
container_src/: requirements.txt  start.sh
containers/: Dockerfile
cpp/: cudss.cpp  cusparse.cpp  gemv.cpp
dd_solvers/: gemv.py
docs/: bibliography.bib  copper-mountain-abstract.tex  manuscript.tex  new_results.tex
experiments/: amgx_pcg_experiments.py  analyze_overlap.ipynb  benchmark_batched_gemv.py  discretization.py  measure_fused_op.ipynb  meshing.py  order_of_approximation.ipynb  overlap.ipynb  overlapping_asm_results.csv  overlapping_asm_results_9.csv  overlapping_asm_results_MM3.csv  overlapping_schwarz_results.csv  overlapping_schwarz_results_coarse.csv  precision_experiments.py  pyamgx_selection_2D.ipynb  pyamgx_selection_3D.ipynb  pyamgx_test_3D.ipynb  run_reference_solvers_experiments.sh  run_solvers_experiments.sh  scaling_experiments.py  solvers_experiments.py  test_reference_solvers.py  test_reference_solvers_madness.py  test_unstructured.py  try_overlap.py
notebooks/: batched_gemv_plots.ipynb  benchmark_batched_gemv.py  benchmark_bf16mv.py  benchmark_bsrmv.py  benchmark_utils.py  best_comparison.ipynb  bf16mv_plots.ipynb  bsrmv_count_nonzeros.py  bsrmv_pivot_table.ipynb  bsrmv_tput.ipynb  compare_times.ipynb  condition_experiments.ipynb  condition_tables.ipynb  (+26 more)
src/experiments/: pyproject.toml
src/experiments/experiments/: __init__.py  discretization.py  experiments.py  meshing.py  problems.py
src/experiments/tests/: test_discretization.py  test_experiments.py  test_meshing.py
(+63 files in other folders)
